# ceph

./: .clang-format  .coveragerc  .dockerignore  .gitattributes  .githubmap  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitmodule_mirrors  .gitmodules  .mailmap  .mergify.yml  .organizationmap  .peoplemap  .readthedocs.yml  .travis.yml  .whitesource  0001-Rcfiles-remove-from-runlevel-2.patch  0001-fix-runlevels-for-start-scripts.patch  0002-init-radosgw-adjust-for-opensuse.patch  0003-Fix-runlevels-for-start-scripts.patch  0003-mkcephfs-add-xfs-support.patch  0004-Fixup-radosgw-daemon-init.patch  0004-init-ceph-add-xfs-support.patch  0005-Fix-runlevels-for-start-scripts.patch  0006-Drop-ceph-keys-into-install.patch  0006-Variable-length-array-of-std-string.patch  0007-add-syncfs-support-v3.patch  0008-Fixup-radosgw-daemon-init.patch  0008-Hack-fix-crashing-tcmalloc-on-sle11.patch  0009-ceph_argparse_flag-has-no-regular-3.patch  0010-Variable-length-array-of-std-string.patch  0010-osdmaptool-test-map-pgs.t-fix-escap.patch  0011-Fix-disk-zap-sgdisk-invocation.patch  0011-warning-Fix-deprecation-warning-fro.patch  0012-Hack-fix-crashing-tcmalloc-on-sle11.patch  0012-Switch-off-systemd-detection.patch  0013-Fix-disk-zap-sgdisk-invocation.patch  0013-init-add-systemd-service-files.patch  0013-osd-OSD.cc-parse-lsb-release-data-v.patch  (+251 more)
LinuxRPM/: Makefile.am
doc/: .gitignore  AGENTS.md  CMakeLists.txt  CTestTestfile.cmake  Makefile  Makefile.am  PendingReleaseNotes  README.md  architecture.rst  bootstrap.rst  ceph-executive-council-responsibilities.rst  cmake_install.cmake  component-leads.rst  conf.py  config.rst  control.rst  faq.rst  foundation.rst  glossary.rst  governance.rst  index.rst  man_index.rst  object_store.dot  overview.dia  overview.rst  papers.rst  release-notes.rst  releases.rst  spelling_wordlist.txt  technical-charter.rst  tutorial.rst
doc/_ext/: ceph_commands.py  ceph_confval.py  ceph_releases.py  edit_on_github.py  substitution_prompt.py
doc/_templates/: layout.html  page.html  smarttoc.html
doc/api/: data-schemas.rst  index.rst  libcephfs-java.rst  librados.rst  libradospp.rst  librbdpy.rst  mon_command_api.rst  s3.rst
doc/appendix/: differences-from-posix.rst  index.rst
doc/ceph-volume/: drive-group.rst  index.rst  intro.rst  inventory.rst  seastore.rst  systemd.rst
doc/cephadm/: administration.rst  adoption.rst  agent.rst  certmgr.rst  client-setup.rst  compatibility.rst  concepts.rst  docker-live-restore.rst  drivegroups.rst  host-management.rst  index.rst  install.rst  iscsi.rst  mds.rst  mgr.rst  mon.rst  monitoring.rst  nfs.rst  octopus_gsg.rst  operations.rst  osd.rst  rgw.rst  service-management.rst  stability.rst  terminology.rst  troubleshooting.rst  upgrade.rst  version-tracker.rst
doc/cephfs/: .gitignore  Makefile  add-remove-mds.rst  additional-details-overview.rst  admin-overview.rst  administration.rst  app-best-practices.rst  best-practices.rst  cache-configuration.rst  cache-size-limits.rst  capabilities.rst  ceph-dokan.rst  cephfs-concepts-overview.rst  cephfs-dmclock.rst  cephfs-io-path.rst  cephfs-journal-tool.rst  cephfs-mirroring-checkpoints.rst  cephfs-mirroring.rst  cephfs-shell.rst  cephfs-tool.rst  cephfs-top.rst  charmap.rst  client-auth.rst  client-config-ref.rst  client-lock-contention.rst  createfs.rst  dev-guides-overview.rst  dirfrags.rst  disaster-recovery-experts.rst  disaster-recovery.rst  dynamic-metadata-management.rst  early-adopters.rst  eviction.rst  experimental-features.rst  file-layouts.rst  fs-nfs-exports.rst  fs-volumes.rst  fscrypt.rst  fstab.rst  full.rst  (+37 more)
doc/changelog/: v0.48.1argonaut.txt  v0.48.2argonaut.txt  v0.56.1.txt  (+67 more)
man/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Makefile  Makefile-client.am  Makefile-server.am  Makefile.am  cauthtool.8  cclass.8  cclsinfo.8  cconf.8  cdebugpack.8  ceph-authtool.8  ceph-clsinfo.8  ceph-conf.8  ceph-create-keys.8  ceph-debugpack.8  ceph-dencoder.8  ceph-deploy.8  ceph-disk.8  ceph-fuse.8  ceph-mds.8  ceph-mon.8  ceph-osd.8  ceph-post-file.8  ceph-rbdnamer.8  ceph-rest-api.8  ceph-run.8  ceph-syn.8  ceph.8  ceph_selinux.8  cephfs.8  cfuse.8  cmake_install.cmake  cmds.8  cmon.8  conf.py  cosd.8  crbdnamer.8  crun.8  (+21 more)
selinux/: .gitignore  CMakeLists.txt  Makefile.am  ceph.fc  ceph.if  ceph.te  ceph_selinux.8
sim/: CMakeLists.txt  config.cc  config.h  dmc_sim_100th.conf  simulate.h  test_dmclock_main.cc
src/: .gitignore  90-ceph-osd.conf  AGENTS.md  BufferCache.cc  BufferCache.h  CMakeLists.txt  CTestTestfile.cmake  IndexedPriorityQueue.h  Makefile  Makefile-client.am  Makefile-env.am  Makefile-lmdb.am  Makefile-rocksdb.am  Makefile-server.am  Makefile-spdk.am  Makefile.am  Makefile.old  Makefile.swig  README  RunningStat.cc  RunningStat.h  SimpleRADOSStriper.cc  SimpleRADOSStriper.h  TODO  aclocations.h.in  authtool.cc  boot.sh  btrfs_ioc_test.c  cauthtool.cc  cclass.in  cclass.sh  cclsinfo  cclsinfo.cc  cclsinfo.sh  cconf.cc  cdebugpack.in  ceph  ceph-clsinfo  ceph-coverage.in  ceph-crash.in  (+241 more)
systemd/: 50-ceph.preset  CMakeLists.txt  CTestTestfile.cmake  Makefile  Makefile.am  ceph  ceph-crash.service.in  ceph-create-keys@.service  ceph-disk-activate-journal@.service  ceph-disk-activate@.service  ceph-disk-dmcrypt-activate@.service  ceph-disk@.service  ceph-exporter.service.in  ceph-fuse.target  ceph-fuse@.service  ceph-fuse@.service.in  ceph-immutable-object-cache.target  ceph-immutable-object-cache@.service  ceph-immutable-object-cache@.service.in  ceph-mds.target  ceph-mds@.service  ceph-mds@.service.in  ceph-mgr.target  ceph-mgr@.service  ceph-mgr@.service.in  ceph-mon.target  ceph-mon@.service  ceph-mon@.service.in  ceph-osd.target  ceph-osd@.service  ceph-osd@.service.in  ceph-radosgw-prestart.sh  ceph-radosgw.target  ceph-radosgw@.service  ceph-radosgw@.service.in  ceph-rbd-mirror.target  ceph-rbd-mirror@.service  ceph-rbd-mirror@.service.in  ceph-rgw.tmpfiles.d.in  ceph-volume@.service  (+15 more)
test/: CMakeLists.txt  dmcPrCtl.h  test_client_server_map.cc  test_dmclock_client.cc  test_dmclock_server.cc  test_server_client_map.cc  test_test_client.cc
(+28011 files in other folders)
